# achuang-esp32

./: CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32s3
docs/: supported-boards.md  tts-deployment.md
main/: CMakeLists.txt  Kconfig.projbuild  application.h  main.cc
