idf_component_register(
    SRCS 
        "main.cc"
        "application.cc"
        "device_state_machine.cc"
        "settings.cc"
        "ota.cc"
        "mcp_server.cc"
        "system_info.cc"
        "assets.cc"
        "protocols/protocol.cc"
        "protocols/websocket_protocol.cc"
        "protocols/mqtt_protocol.cc"
    INCLUDE_DIRS "."
    REQUIRES 
        esp32 
        esp_common 
        esp_system 
        esp_adc 
        esp_eth 
        esp_event 
        esp_http_client 
        esp_http_server 
        esp_https_ota 
        esp_psram 
        esp_secure_cert 
        esp_sleep 
        esp_timer 
        esp_wifi 
        esp_netif 
        espcoredump 
        bootloader_support 
        bt 
        espnow 
        freertos 
        hal 
        heap 
        http_parser 
        json 
        log 
        lwip 
        mbedtls 
        mmx 
        newlib 
        nvs_flash 
        openssl 
        partition_table 
        perfmon 
        pthread 
        sdmmc 
        soc 
        spiffs 
        spi_flash 
        tcp_transport 
        tcpip_adapter 
        ulp 
        unity 
        wifi_provisioning 
        wpa_supplicant 
        driver 
        esp_audio_player 
        esp_adc_cal 
        esp_http_client 
        esp_local_ctrl 
        esp_websocket_client 
        esp_serial_slave_link 
        esp_digital_signature 
        esp_cert_bundle 
        esp_https_server 
        fatfs 
        spiffs 
        WearLeveling 
        FatFS 
        SmartPMS 
        freq_demo 
        button 
        led_strip 
        audio_pipeline 
        esp_codec 
        esp_audio 
        esp_sr 
        esp_io_expander 
        esp_lcd 
        esp_lcd_ili9341 
        esp_lcd_st7789 
        esp_lcd_st7796 
        esp_lcd_gc9a01 
        esp_lcd_gc9a01_parallel 
        esp_lcd_nt35510 
        esp_lcd_sh8601 
        esp_lcd_ssd1306 
        esp_lcd_naU8546 
        esp_lcd_bridge 
        i2c_eeprom 
        i2c_sht3x 
        i2c_lsm6dsm 
        lcd_camera 
        mpu6050 
        ap3216c 
        bm8563 
        aht10 
        sht4x 
        cst816t 
        gt911 
        ft5x06 
        common 
        esp-tts 
        esp_afe_vad 
        esp_afe_sr 
        esp_afe_tlv 
        esp_spa
)
